--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div id="intro">
 							<h1> Welcome to <b>UdaBuddy</b></h1><br>
 							<h2 style="font-family: 'Slabo 27px', serif;">
-								A Platform for Udacity Students and Alumini
+								A Platform for Udacity Students and Alumni
 							</h2><br>
 							<h3 style="font-family: 'Jua', sans-serif;"> 
 								Lets learn together !
